--- a/index.html
+++ b/index.html
@@ -21,5 +21,10 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <!-- Include PDF export JS lib. -->
+    <script
+      type="text/javascript"
+      src="https://raw.githack.com/eKoopmans/html2pdf/master/dist/html2pdf.bundle.js"
+    ></script>
   </body>
 </html>
